--- a/2022-10-01-Bab-1.md
+++ b/2022-10-01-Bab-1.md
@@ -77,6 +77,7 @@ Aturan dalam penamaan identifiers:
    1. Identifiers dapat berupa kombinasi dari huruf dalam lowercase (a-z) atau uppercase (A-Z) atau digit (0-9) atau underscore (_).
    Contoh:
 
+        {:.python-lang}
         ```python
         myClass, var_1, this_is_a_long_variable
         ```
