--- a/2022-10-01-Bab-1.md
+++ b/2022-10-01-Bab-1.md
@@ -4,8 +4,6 @@ date: '2022-10-01'
 layout: default
 ---
 
-# Bab 1: Intro to Python
-
 Python sebagai bahasa pemrograman yang populer dan komprehensif dengan
 menggabungkan kapabilitas, sintaksis kode yang jelas serta dilengkapi pustaka
 standar yang mempunyai fungsionalitas sangat besar. Python termasuk dari jajaran
@@ -26,165 +24,112 @@ variabel, fungsi, atau objek lainnya.Semua keywords selain True, False, dan None
 ditulis dalam lowercase dan harus ditulis apa adanya. Berikut ini adalah daftar
 keywords yang ada pada Python:
 
-<table align="center">
-    <tr>
-        <td align="center">False</td>
-        <td align="center">await</td>
-        <td align="center">else</td>
-        <td align="center">import</td>
-        <td align="center">pass</td>
-    </tr>
-    <tr>
-        <td align="center">None</td>
-        <td align="center">break</td>
-        <td align="center">except</td>
-        <td align="center">in</td>
-        <td align="center">raise</td>
-    </tr>
-    <tr>
-        <td align="center">True</td>
-        <td align="center">class</td>
-        <td align="center">finally</td>
-        <td align="center">is</td>
-        <td align="center">return</td>
-    </tr>
-    <tr>
-        <td align="center">and</td>
-        <td align="center">continue</td>
-        <td align="center">for</td>
-        <td align="center">lambda</td>
-        <td align="center">try</td>
-    </tr>
-    <tr>
-        <td align="center">as</td>
-        <td align="center">def</td>
-        <td align="center">from</td>
-        <td align="center">nonlocal</td>
-        <td align="center">while</td>
-    </tr>
-    <tr>
-        <td align="center">assert</td>
-        <td align="center">del</td>
-        <td align="center">global</td>
-        <td align="center">not</td>
-        <td align="center">with</td>
-    </tr>
-    <tr>
-        <td align="center">async</td>
-        <td align="center">elif</td>
-        <td align="center">if</td>
-        <td align="center">or</td>
-        <td align="center">yield</td>
-    </tr>
-</table>
+| False  | await    | else    | import   | pass   |
+| None   | break    | except  | in       | raise  |
+| True   | class    | finally | is       | return |
+| and    | continue | for     | lambda   | try    |
+| as     | def      | from    | nonlocal | while  |
+| assert | del      | global  | not      | with   |
+| async  | elif     | if      | or       | yield  |
+
 
 ## B. Identifiers
 
 Identifiers merupakan nama yang diberikan kepada variabel, fungsi, kelas, modul
 atau objek lainnya. Identifiers dalam Python tidak boleh diawali dengan angka,
 tetapi boleh mengandung angka. Identifiers juga tidak boleh mengandung spasi
-atau karakter khusus, kecuali underscore (`_`) dan dollar sign ($). Identifiers
+atau karakter khusus, kecuali underscore (`_`) dan dollar sign (`$`). Identifiers
 juga bersifat case sensitive, artinya identifier yang ditulis dengan huruf besar
 dan huruf kecil berbeda.
 
 Aturan dalam penamaan identifiers:
 
-   1. Identifiers dapat berupa kombinasi dari huruf dalam lowercase (a-z) atau
-   uppercase (A-Z) atau digit (0-9) atau underscore (`_`).
+1. Identifiers dapat berupa kombinasi dari huruf dalam lowercase (`a-z`) atau
+   uppercase (`A-Z`) atau digit (`0-9`) atau underscore (`_`).
    Contoh:
 
-        ```python
-        myClass, var_1, this_is_a_long_variable
-        ```
+    ```python
+myClass, var_1, this_is_a_long_variable
+    ```
 
-   2. Identifiers tidak boleh diawali dengan digit angka.
-    Contoh:
+2. Identifiers tidak boleh diawali dengan digit angka. Contoh:
 
-        ```python
-        1variable #penulisan salah
-        variable1 #penulisan benar
-        ```
+    ```python
+1variable #penulisan salah
+variable1 #penulisan benar
+    ```
 
-   3. Keywords tidak dapat digunakan sebagai identifiers.
+3. Keywords tidak dapat digunakan sebagai identifiers.
 
-        ```python
-        True = 1 #penulisan salah
-        ```
+    ```python
+True = 1 #penulisan salah
+    ```
 
-        Maka outputnya akan error:
+    Maka outputnya akan error:
 
-        ```text
-        File "e:\SISFOK\tes.py", line 1
-        True = 1
-        ^^^^
-        SyntaxError: cannot assign to True
-        ```
+    ```bash
+File "e:\SISFOK\tes.py", line 1
+True = 1
+^^^^
+SyntaxError: cannot assign to True
+    ```
 
-   4. Tidak diperbolehkan menggunakan symbol special seperti !, @, #, $, %, dll
-    Contoh :
+4. Tidak diperbolehkan menggunakan symbol special seperti `!`, `@`, `#`, `$`,
+`%`, dll. Contoh :
+```python
+x$ = 1 #penulisan salah
+```
+Outputnya:
+```bash
+File "e:\SISFOK\tes.py", line 1
+x$ = 1
+ ^
+SyntaxError: invalid syntax
+```
 
-        ```python
-        x$ = 1 #penulisan salah
-        ```
+5. Sebuah identifier dapat memiliki panjang berapapun.
 
-        Outputnya:
+6. Identifier Class harus diawali dengan huruf kapital sedangkan semua
+identifier lainnya harus diawali dengan huruf kecil. Contoh:
+    
+    ```python
+    class Vehicle:
+        wheels = 4
 
-        ```text
-        File "e:\SISFOK\tes.py", line 1
-        x$ = 1
-        ^
-        SyntaxError: invalid syntax
-        ```
 
-   5. Sebuah identifier dapat memiliki panjang berapapun.
-   6. Identifier Class harus diawali dengan huruf kapital sedangkan semua
-   identifier lainnya harus diawali dengan huruf kecil.
+    car = Vehicle()
+    print(car.wheels)
+    ```
 
-        Contoh:
+7. Identifier yang dimulai dengan underscore (`_`) menandakan identifier
+tersebut merupakan identifier private. Contoh:
 
-        ```python
-        class Vehicle:
-            wheels = 4
-
-        car = Vehicle()
-        print(car.wheels)
-       ```
-
-   7. Identifier yang dimulai dengan underscore (`_`) menandakan identifier
-   tersebut merupakan identifier private.
-
-       Contoh:
-
-       ```python
-       class Base:
-        # Declaring private method
+    ```python
+    class Base:
+    # Declaring private method
         def _fun(self):
-         print ("Private method")
-       ```
+            print ("Private method")
+    ```
 
-   8. Identifier yang dimulai dengan dua buah underscore (`__`) menandakan
-   identifier tersebut merupakan identifier yang sangat private.
+8. Identifier yang dimulai dengan dua buah underscore (`__`) menandakan
+   identifier tersebut merupakan identifier yang sangat private. Contoh:
 
-        Contoh:
+    ```python
+class Base:
+# Declaring private method
+    def __fun(self):
+        print ("Private method")
+    ```
 
-        ```python
-        class Base:
-         # Declaring private method
-         def __fun(self):
-          print ("Private method")
-        ```
+9. Jika identifier tersebut juga diakhiri dengan dua buah underscore (`____`),
+identifier tersebut merupakan nama yang telah ditetapkan Python. Contoh:
 
-   9. Jika identifier tersebut juga diakhiri dengan dua buah underscore
-   (`____`), identifier tersebut merupakan nama yang telah ditetapkan Python.
-
-        Contoh:
-
-        ```python
-        class Base:
-        # Declaring private method
-        def __init__(self):
-         print ("Private method")
-        ```
+    ```python
+class Base:
+# Declaring private method
+    def __init__(self):
+        print ("Private method")
+    ```
 
 > Hal yang perlu diperhatikan dalam penamaan identifiers adalah:
 >
@@ -205,9 +150,9 @@ mesin. Penulisan statements dalam Python tidak diakhiri dengan tanda titik koma
 (`;`). Contohnya sebagai berikut:
 
 ```python
-x=1
-y=x
-z=x+y
+x = 1
+y = x
+z = x + y
 ```
 
 Dalam Python, akhir dari statement ditandai dengan baris baru. Tapi, kita dapat
@@ -215,9 +160,9 @@ memperpanjang sebuah statement lebih dari beberapa baris secara eksplisit dengan
 menggunakan karakter forward slash (`\`). Contohnya :
 
 ```python
-x=1+2+3+\
- 4+5+6+\
- 7+8+9
+x = 1+2+3+\
+    4+5+6+\
+    7+8+9
 ```
 
 Multi-line statements juga terdapat dalam tanda kurung `()`, kurung siku `[]`,
@@ -255,22 +200,20 @@ spasi digunakan sebagai indentasi dan lebih dipilih daripada tab. Sebagai
 contoh:
 
 - Penulisan Benar
-  
-  ```python
-  for i in range(1, 20):
-      if i == 3:
-          print("it's three")
-          Break
-  ```
+```python
+for i in range(1, 20):
+    if i == 3:
+        print("it's three")
+        break
+```
 
 - Penulisan Salah
-  
-  ```python
-  for i in range(1, 20):
-  if i == 3:
-  print("it's three")
-  Break
-  ```
+```python
+for i in range(1, 20):
+    if i == 3:
+        print("it's three")
+        break
+```
 
 Penggunaan dari indentasi dalam Python membuat kode terlihat rapi dan bersih
 sehingga menghasilkan sebuah kode yang terlihat mirip dan konsisten. Indentasi
@@ -297,13 +240,13 @@ mendeskripsikan isi dari kode tersebut sehingga orang lain tidak sulit dalam
 memahami kode yang kita tulis. Penulisan comment dalam Python terbagi menjadi:
 
 - Single-line comment
-  
+
   ```python
   #This is a single-line comment
   ```
 
 - Multi-line comment
-  
+
   ```python
   """
   This is
@@ -391,7 +334,7 @@ Aturan dan Ketentuan dalam penamaan variabel dan constant:
 
 1. Nama constant dan variabel harus memiliki kombinasi huruf kecil (a-z) atau
 2. huruf besar (A-Z) atau angka (0-9) atau garis bawah (`_`):
-   
+
    ```python
    snake_case
    MACRO_CASE
@@ -402,14 +345,14 @@ Aturan dan Ketentuan dalam penamaan variabel dan constant:
 3. Buat nama yang masuk akal. Misalnya length lebih masuk akal daripada l.
 4. Jika ingin menulis nama variabel yang lebih dari dua kata, gunakan garis
 5. bawah untuk memisahkannya.
-   
+
    ```python
    car_name
    this_is_a_variable
    ```
 
 6. Gunakan huruf kapital untuk mendeklarasikan sebuah constant.
-   
+
    ```python
    PI
    G
@@ -701,10 +644,10 @@ operator disebut operand.
 Dalam Python ada beberapa operator, sebagai berikut:
 
 1. Arithmetic Operators
-   
+
    Operator aritmatik digunakan untuk menjalankan operasi matematika seperti
    penjumlahan, pengurangan, perkalian, dll.
-   
+
    | Operator | Arti                                                                                                    | Contoh |
    |:--------:|:-------------------------------------------------------------------------------------------------------:|:------:|
    | +        | Menjumlahkan dua operand atau unary plus                                                                | x + y  |
@@ -716,10 +659,10 @@ Dalam Python ada beberapa operator, sebagai berikut:
    | **       | Pangkat – operand kiri dipangkatkan oleh operand kanan                                                  | x ** y |
 
 2. Comparison (Relational) Operators
-   
+
    Operator komparasi digunakan untuk membandingkan value dan akan mengembalikan
    nilai True atau False berdasarkan kondisinya.
-   
+
    | Operator | Arti                                                                                     | Contoh |
    |:--------:|:----------------------------------------------------------------------------------------:|:------:|
    | >        | Lebih besar dari – True jika operand kiri lebih besar dari kanan                         | x > y  |
@@ -730,7 +673,7 @@ Dalam Python ada beberapa operator, sebagai berikut:
    | <=       | Lebih kecil atau sama dengan – True jika operand kiri lebih kecil atau sama dengan kanan | x <= y |
 
 3. Logical (Boolean) Operators
-   
+
    | Operator | Arti                                                  | Contoh  |
    |:--------:|:-----------------------------------------------------:|:-------:|
    | and      | True jika kedua operand bernilai True                 | x and y |
@@ -738,12 +681,12 @@ Dalam Python ada beberapa operator, sebagai berikut:
    | not      | True jika operand bernilai False                      | not x   |
 
 4. Bitwise Operators
-   
+
    Operator bitwise bertindak pada operand seolah-olah mereka adalah string
    digit binary.
-   
+
    Pada tabel di bawah : misalkan x = 10 (0000 1010) dan y = 4 (0000 0100)
-   
+
    | Operator | Arti                | Contoh                  |
    |:--------:|:-------------------:|:-----------------------:|
    | &        | Bitwise AND         | x & y = 0 (0000 0000)   |
@@ -754,10 +697,10 @@ Dalam Python ada beberapa operator, sebagai berikut:
    | <<       | Bitwise left shift  | x << 2 = 40 (0010 1000) |
 
 5. Assignment Operators
-   
+
    Operator assignment digunakan dalam Python untuk menetapkan nilai ke
    variable.
-   
+
    | Operator | Arti    | Contoh |
    |:--------:|:-------:|:------:|
    | =        | x = 5   | x = 5  |
@@ -775,14 +718,14 @@ Dalam Python ada beberapa operator, sebagai berikut:
    | <<=      | x <<= 5 |        |
 
 6. Identity Operator
-   
+
    | Operator | Arti                            | Contoh        |
    |:--------:|:-------------------------------:|:-------------:|
    | is       | True jika kedua operand identik | x is True     |
    | is not   | True jika operand tidak identik | x is not True |
 
 7. Membership Operator
-   
+
    | Operator | Arti                                                      | Contoh        |
    |:--------:|:---------------------------------------------------------:|:-------------:|
    | in       | True jika value/variable ditemukan dalam collections      | x in True     |
