--- a/2022-10-01-Bab-1.md
+++ b/2022-10-01-Bab-1.md
@@ -2,27 +2,26 @@
 title: Intro to Python
 date: '2022-10-01'
 layout: default
+toc: true
 ---
 
 Python sebagai bahasa pemrograman yang populer dan komprehensif dengan
 menggabungkan kapabilitas, sintaksis kode yang jelas serta dilengkapi pustaka
 standar yang mempunyai fungsionalitas sangat besar. Python termasuk dari jajaran
-bahasa pemrograman tingkat tinggi seperti bahasa pemrograman C[^1], C++, Java,
+bahasa pemrograman tingkat tinggi seperti bahasa pemrograman C++, Java,
 Perl dan Pascal.
 
-[^1]: C adalah bahasa tingkat menengah karena bisa menggunakan asm
-
-## A. Keywords
+## Keywords
 
 Keywords adalah kata yang dicadangkan oleh Python sehingga tidak boleh digunakan
 sebagai nama variabel, fungsi atau identifier lainnya. Keywords sendiri
 digunakan untuk mendefinisikan sintaks dan struktur dari bahasa Python. Keyword
 dalam Python merupakan case sensitive.
 
-Python 3.7 memiliki 33 keywords yang tidak dapat digunakan sebagai nama
-variabel, fungsi, atau objek lainnya.Semua keywords selain True, False, dan None
-ditulis dalam lowercase dan harus ditulis apa adanya. Berikut ini adalah daftar
-keywords yang ada pada Python:
+Python 3.1 memiliki 33 keywords yang tidak dapat digunakan sebagai nama
+variabel, fungsi, atau objek lainnya. Semua keywords selain `True`, `False`, dan
+`None`, ditulis dalam <mark>lowercase</mark>. Berikut ini adalah daftar keywords
+yang ada pada Python:
 
 | False  | await    | else    | import   | pass   |
 | None   | break    | except  | in       | raise  |
@@ -33,7 +32,7 @@ keywords yang ada pada Python:
 | async  | elif     | if      | or       | yield  |
 
 
-## B. Identifiers
+## Identifiers
 
 Identifiers merupakan nama yang diberikan kepada variabel, fungsi, kelas, modul
 atau objek lainnya. Identifiers dalam Python tidak boleh diawali dengan angka,
